Criando rotas de aluguel
